--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "webix-jet": "^1.6.1"
   }
 }
