--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "sequelize": "^4.38.0",
+    "sqlite": "^3.0.0",
     "webix-jet": "^1.6.1"
   }
 }
