--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.15.6",
     "sequelize": "^4.38.0",
     "sqlite": "^3.0.0",
+    "webix": "^6.0.5",
     "webix-jet": "^1.6.1"
   }
 }
